Update selected publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,8 @@
   pages={7208--7215},
   year={2019},
   preview={wang2019improving.png},
-  code={https://github.com/IBM/knowledge-enabled-textual-entailment}
+  code={https://github.com/IBM/knowledge-enabled-textual-entailment},
+  selected={true}
 }
 
 @inproceedings{musa2019answering,
@@ -26,7 +27,8 @@
   booktitle={Automated Knowledge Base Construction},
   arxiv={1809.05726},
   year={2019},
-  preview={musa2019answering.png}
+  preview={musa2019answering.png},
+  selected={true}
 }
 
 @article{wang2019consistent,
@@ -50,7 +52,8 @@
   year={2020},
   website={https://pplbench.org/},
   preview={kulkarni2020ppl.png},
-  code={https://github.com/facebookresearch/pplbench}
+  code={https://github.com/facebookresearch/pplbench},
+  selected={true}
 }
 
 @mastersthesis{wang2020hibi,
